# openclaw-ai-tempo-agent

./: .env.example  .gitignore  AGENTS.md  BOOT.md  CLAUDE.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  Makefile  README.md  SOUL.md  TOOLS.md  USER.md  agent.yaml  docker-compose.yml
.github/workflows/: ci.yml  pipeline.yml
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
.omc/state/sessions/82a7eb12-c49f-4176-91fe-aabe70b7a470/: ultrawork-state.json
backend/: Dockerfile  mix.exs
backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend/lib/: tempo_web.ex
backend/lib/tempo/: analytics.ex  application.ex  data_store.ex  mq_client.ex  mq_ws_client.ex
backend/lib/tempo/sources/: augment.ex
backend/lib/tempo_web/: endpoint.ex  router.ex  telemetry.ex
backend/lib/tempo_web/controllers/: analytics_controller.ex  error_json.ex  health_controller.ex
backend/test/tempo/: analytics_test.exs  application_test.exs  data_store_test.exs
backend/test/tempo_web/: telemetry_test.exs
backend/test/tempo_web/controllers/: analytics_controller_test.exs  error_json_test.exs
dashboard/: Dockerfile  angular.json  karma.conf.js  package-lock.json  package.json
dashboard/src/: index.html  styles.css  test.ts
dashboard/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
dashboard/src/app/components/stat-card/: stat-card.component.spec.ts  stat-card.component.ts
dashboard/src/app/components/top-users-chart/: top-users-chart.component.spec.ts  top-users-chart.component.ts
dashboard/src/app/components/usage-chart/: usage-chart.component.spec.ts  usage-chart.component.ts
dashboard/src/app/components/user-table/: user-table.component.spec.ts  user-table.component.ts
dashboard/src/app/models/: analytics.model.ts
dashboard/src/app/pages/dashboard/: dashboard.component.spec.ts  dashboard.component.ts
dashboard/src/app/services/: analytics.service.spec.ts  analytics.service.ts
data/: augment_data.json
pipelines/: pyproject.toml
pipelines/src/tempo_pipelines/: __init__.py  __main__.py  cli.py  config.py  models.py
pipelines/src/tempo_pipelines/sources/: augment.py
pipelines/tests/: test_augment.py  test_cli.py  test_config.py  test_models.py
skills/: usage_metrics_collect.json  usage_metrics_collect.md  usage_metrics_collect.sh
spec/: API.md  ARCHITECTURE.md  COMMUNICATION.md  CRON.md  LEARNINGS.md  PIPELINES.md  SAFETY.md  TESTING.md  TROUBLESHOOTING.md
tools/: pipeline_runner
