[tool.poetry]
name = "tempo-pipelines"
version = "0.1.0"
description = "Data ingestion pipelines for Openclaw AI Tempo Agent"
authors = ["Redlex Gilgamesh"]
license = "MIT"
readme = "README.md"
packages = [{include = "tempo_pipelines", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
structlog = "^24.4.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
respx = "^0.22.0"

[tool.poetry.scripts]
tempo-pipeline = "tempo_pipelines.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
